--- a/index.html
+++ b/index.html
@@ -1056,7 +1056,7 @@
                     <img src="DSCF5155.jpeg" alt="Harrison Tang">
                 </div>
                 <div class="bio-text">
-                    <p>Harrison is a youth advocate dedicated to improving global health and well-being. He has contributed to a wide range of innovations in the field, ranging from inventing low-cost point-of-care diagnostics of foodborne pathogens to developing improved drug-delivery platforms for COVID-19 and Influenza vaccines.</p>
+                    <p>Harrison is a youth advocate dedicated to improving people's health and well-being. He has contributed to a wide range of innovations in the field, ranging from inventing low-cost point-of-care diagnostics of foodborne pathogens to developing improved drug-delivery platforms for COVID-19 and Influenza vaccines.</p>
                 </div>
             </div>
         </section>
